# mega-sena

./: Cargo.toml  README.md
src/: main.rs
